add support of hashmap in environment variables
Signed-off-by: Benjamin Coenen <5719034+bnjjj@users.noreply.github.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ coveralls = { repository = "softprops/envy" }
 travis-ci = { repository = "softprops/envy" }
 
 [dependencies]
+regex = "1.4.1"
 serde = "1.0"
 
 [dev-dependencies]
