Adapt dependabot to weekly
Signed-off-by: Marcel Müller <neikos@neikos.email>

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,6 +3,6 @@ updates:
 - package-ecosystem: cargo
   directory: "/"
   schedule:
-    interval: daily
-    time: "10:00"
+    interval: weekly
+    time: "6:00"
   open-pull-requests-limit: 10
