--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -1,8 +1,6 @@
-# https://github.com/rust-lang/rustfmt/blob/master/Configurations.md#fn_args_layout
-fn_args_layout = "Vertical"
-# https://github.com/rust-lang/rustfmt/blob/master/Configurations.md#merge_imports
-merge_imports = true
+# https://github.com/rust-lang/rustfmt/blob/master/Configurations.md#fn_params_layout
+fn_params_layout = "Vertical"
+# https://github.com/rust-lang/rustfmt/blob/master/Configurations.md#imports_granularity
+imports_granularity = "Crate"
 # https://github.com/rust-lang/rustfmt/blob/master/Configurations.md#format_code_in_doc_comments
 format_code_in_doc_comments = true
-# https://github.com/rust-lang/rustfmt/blob/master/Configurations.md#edition
-edition = "2018"
